--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.2"
   },
   "dependencies": {
+    "ethers": "^6.11.1",
     "openzeppelin-solidity": "github:OpenZeppelin/openzeppelin-contracts"
   }
 }
